<b><u> v2.24, xx.11.2016</b></u>
<font color=#FF8C00>&#9830;</font> Changed AddOnSkins embedded settings for Skada.
<font color=#FF8C00>&#9830;</font> Remove the MUI SpeccSwitch Datatext. I use the ElvUI default ones.
<font color=#FF8C00>&#9830;</font> Add WorldQuest Tooltip Icons.
<font color=#FF8C00>&#9830;</font> Add MiniMapPing. Show the PlayerName who pinged on the MiniMap.
<font color=#FF8C00>&#9830;</font> Pepe is now in your flightMode. :)
<font color=#FF8C00>&#9830;</font> Fix install steps messages.
<font color=#FF8C00>&#9830;</font> Change readyCheck textures.
<font color=#FF8C00>&#9830;</font> Add a ChatTab Datatext Panel.

<b><u> v2.23, 02.11.2016</b></u>
<font color=#FF8C00>&#9830;</font> Fix a taint in WorldMap #40
<font color=#FF8C00>&#9830;</font> Update BigWigs Skin. Now based on HalfBar Skin from AddOnSkins. Credits Azilroka
<font color=#FF8C00>&#9830;</font> Let BenikUI handle the fonts.

<b><u> v2.22, 26.10.2016</b></u>
<font color=#FF8C00>&#9830;</font> Fix a nil error in locPanel if entering an instance.

<b><u> v2.21, 25.10.2016</b></u>
<font color=#FF8C00>&#9830;</font> FOR PATCH 7.1
<font color=#FF8C00>&#9830;</font> Add back GroupInfo Frame. It's now movable via mover if you are in a Raid/Group.
<font color=#FF8C00>&#9830;</font> Remove settings from ElvUI that are no longer exist.

<b><u> v2.20, 21.10.2016</b></u>
<font color=#FF8C00>&#9830;</font> Massive Code cleanup.
<font color=#FF8C00>&#9830;</font> Change the tag for BigName in Player-/TargetFrame.
<font color=#FF8C00>&#9830;</font> Let the Bossmods handle the RaidWarnigFrame.
<font color=#FF8C00>&#9830;</font> Delete GroupInfo.
<font color=#FF8C00>&#9830;</font> Some Layout adjustments.
<font color=#FF8C00>&#9830;</font> Added a Vignette-Alert (For Rars/Treasures).
<font color=#FF8C00>&#9830;</font> Updated LocPanel and fix a error in Dropdown.
<font color=#FF8C00>&#9830;</font> Change the ClassIcon texture for the TargetFrame.